# actix-web-rust-example

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/config/: app.rs  mod.rs  user.rs
src/constant/: api_path.rs  mod.rs  response_code.rs
src/controller/: mod.rs  ping_controller.rs  user_controller.rs
src/entity/: response.rs  user.rs
src/service/: mod.rs  user_services.rs
