[package]
name = "actix-web-rust-example"
version = "0.1.0"
authors = ["nur.hakim.soleh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
actix-service = "1.0.5"
actix-cors = "0.2.0"
log = "0.4.8"
env_logger = "0.7.1"